full text searches :stars:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -63,40 +63,261 @@
 > The system being developed must provide full-text search features supported by PostgreSQL. Thus, it is necessary to specify the fields where full-text search will be available and the associated setup, namely all necessary configurations, indexes definitions and other relevant details.
 
 <table>
-<tbody>
-<tr>
-<td><b>Index reference<b></td>
-<td>IDX01</td>
-</tr>
-<tr>
-<td><b>Related queries</b></td>
-<td>SELECT01, ... </td>
-</tr>
-<tr>
-<td><b>Index relation</b></td>
-<td>Relation where the index is applied</td>
-</tr>
-<tr>
-<td><b>Index attribute</b></td>
-<td>Attribute where the index is applied</td>
-</tr>
-<tr>
-<td><b>Index type</b></td>
-<td>B-tree, Hash, GiST or GIN</td>
-</tr>
-<tr>
-<td><b>Clustering</b></td>
-<td>Clustering of the index</td>
-</tr>
-<tr>
-<td><b>Justification</b></td>
-<td>Justification for the proposed index</td>
-</tr>
-<tr>
-<td><b>SQL code</b></td>
-<td></td>
-</tr>
-</tbody>
+    <tbody>
+    <tr>
+    <td><b>Index reference<b></td>
+    <td>IDX01</td>
+    </tr>
+    <tr>
+    <td><b>Related queries</b></td>
+    <td>TODO: RELATED QUERIES </td>
+    </tr>
+    <tr>
+    <td><b>Index relation</b></td>
+    <td>User</td>
+    </tr>
+    <tr>
+    <td><b>Index attribute</b></td>
+    <td>userName</td>
+    </tr>
+    <tr>
+    <td><b>Index type</b></td>
+    <td>GIN</td>
+    </tr>
+    <tr>
+    <td><b>Clustering</b></td>
+    <td>No</td>
+    </tr>
+        <tr>
+        <td><b>Justification</b></td>
+        <td>
+        To improve performance of full text search while searching for usernames; GIN because usernames never changes.
+        </td>
+        </tr>
+        <tr>
+            <td><b>SQL Code</b></td>
+            <td>
+           <code sql>
+            CREATE INDEX search_username ON User USING GIN (to_tsvector('english', username))
+            </code>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<table>
+    <tbody>
+        <tr>
+        <td><b>Index reference<b></td>
+        <td>IDX02</td>
+        </tr>
+        <tr>
+        <td><b>Related queries</b></td>
+        <td>TODO: RELATED QUERIES</td>
+        </tr>
+        <tr>
+        <td><b>Index relation</b></td>
+        <td>User</td>
+        </tr>
+        <tr>
+        <td><b>Index attribute</b></td>
+        <td>name</td>
+        </tr>
+        <tr>
+        <td><b>Index type</b></td>
+        <td>GIN</td>
+        </tr>
+        <tr>
+        <td><b>Clustering</b></td>
+        <td>No</td>
+        </tr>
+        <tr>
+        <td><b>Justification</b></td>
+        <td>
+        To improve performance of full text search while searching for user full names; GIN because updates in user full names are rare.
+        </td>
+        </tr>
+        <tr>
+            <td><b>SQL Code</b></td>
+            <td>
+           <code sql>
+               CREATE INDEX search_user_name ON User USING GIN (to_tsvector('english', name))
+            </code>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<table>
+    <tbody>
+        <tr>
+        <td><b>Index reference<b></td>
+        <td>IDX03</td>
+        </tr>
+        <tr>
+        <td><b>Related queries</b></td>
+        <td>TODO: RELATED QUERIES</td>
+        </tr>
+        <tr>
+        <td><b>Index relation</b></td>
+        <td>Project</td>
+        </tr>
+        <tr>
+        <td><b>Index attribute</b></td>
+        <td>name</td>
+        </tr>
+        <tr>
+        <td><b>Index type</b></td>
+        <td>GIN</td>
+        </tr>
+        <tr>
+        <td><b>Clustering</b></td>
+        <td>No</td>
+        </tr>
+        <tr>
+        <td><b>Justification</b></td>
+        <td>
+        To improve performance of full text search while searching for project names; GIN because updates in the project name are rare.
+        </td>
+        </tr>
+        <tr>
+            <td><b>SQL Code</b></td>
+            <td>
+           <code sql>
+               CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', name))
+            </code>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<table>
+    <tbody>
+        <tr>
+        <td><b>Index reference<b></td>
+        <td>IDX03</td>
+        </tr>
+        <tr>
+        <td><b>Related queries</b></td>
+        <td>TODO: RELATED QUERIES</td>
+        </tr>
+        <tr>
+        <td><b>Index relation</b></td>
+        <td>Project</td>
+        </tr>
+        <tr>
+        <td><b>Index attribute</b></td>
+        <td>description</td>
+        </tr>
+        <tr>
+        <td><b>Index type</b></td>
+        <td>GisT</td>
+        </tr>
+        <tr>
+        <td><b>Clustering</b></td>
+        <td>No</td>
+        </tr>
+        <tr>
+        <td><b>Justification</b></td>
+        <td>
+        To improve performance of full text search while searching for project names; GisT because the project description is dynamic.
+        </td>
+        </tr>
+        <tr>
+            <td><b>SQL Code</b></td>
+            <td>
+           <code sql>
+               CREATE INDEX search_project_description ON Project USING GIST (to_tsvector('english', description))
+            </code>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<table>
+    <tbody>
+        <tr>
+        <td><b>Index reference<b></td>
+        <td>IDX04</td>
+        </tr>
+        <tr>
+        <td><b>Related queries</b></td>
+        <td>TODO: RELATED QUERIES</td>
+        </tr>
+        <tr>
+        <td><b>Index relation</b></td>
+        <td>Task</td>
+        </tr>
+        <tr>
+        <td><b>Index attribute</b></td>
+        <td>name</td>
+        </tr>
+        <tr>
+        <td><b>Index type</b></td>
+        <td>GIN</td>
+        </tr>
+        <tr>
+        <td><b>Clustering</b></td>
+        <td>No</td>
+        </tr>
+        <tr>
+        <td><b>Justification</b></td>
+        <td>
+        To improve performance of full text search while searching for tasks; GIN because the updates in the task name are rare.
+        </td>
+        </tr>
+        <tr>
+            <td><b>SQL Code</b></td>
+            <td>
+           <code sql>
+               CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', name))
+            </code>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<table>
+    <tbody>
+        <tr>
+        <td><b>Index reference<b></td>
+        <td>IDX04</td>
+        </tr>
+        <tr>
+        <td><b>Related queries</b></td>
+        <td>TODO: RELATED QUERIES</td>
+        </tr>
+        <tr>
+        <td><b>Index relation</b></td>
+        <td>Task</td>
+        </tr>
+        <tr>
+        <td><b>Index attribute</b></td>
+        <td>description</td>
+        </tr>
+        <tr>
+        <td><b>Index type</b></td>
+        <td>GisT</td>
+        </tr>
+        <tr>
+        <td><b>Clustering</b></td>
+        <td>No</td>
+        </tr>
+        <tr>
+        <td><b>Justification</b></td>
+        <td>
+        To improve performance of full text search while searching for tasks; GisT because the task description is dynamic.
+        </td>
+        </tr>
+        <tr>
+            <td><b>SQL Code</b></td>
+            <td>
+           <code sql>
+               CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', name))
+            </code>
+            </td>
+        </tr>
+    </tbody>
 </table>
 
 ## 3. Triggers
