Updated A4 to delete projectForum Class

--- a/artifacts/A4/A4.md
+++ b/artifacts/A4/A4.md
@@ -33,9 +33,12 @@ Changes made to the first submission:
 7. Added some business rules (e.g. Close request).
 8. Removed Reply self-association, but kept the Comment self-association.
 
+Changes made to the second submission:
+1. Removed Project Forum class.
+
 ***
 
-GROUP1743, 18/03/2018
+GROUP1743, 20/03/2018
 
 > Mateus Pedroza Cortes Marques, up201601876@fe.up.pt   
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt   
