A5 Revision history :pencil2:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -8,23 +8,22 @@ Relation schemas are specified in the compact notation:
 
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
-| R01                | UserTable(<u>idUser</u>, username UK NN, password NN, email UK NN, premium NN, banned NN, name, gender, address,institution, description, birthDate, idCountry->Country) |
-| R02                | Task(<u>idTask</u>, creationDate NN, lastEditDate, title NN, description, deadline, completed NN, completedDate, idUser->UserTable, idProject->Project) |
+| R01                | UserTable(<u>idUser</u>, username UK NN, password NN, email UK NN, premium NN, banned NN, name, gender, address,institution, description, birthDate CK birthDate < current_date, idCountry->Country) |
+| R02                | Task(<u>idTask</u>, creationDate NN, lastEditDate, title NN, description, deadline, completed NN, completedDate CK completedDate > creationDate, idUser->UserTable NN, idProject->Project NN) |
 | R03                | Assigned(<u>idUser</u>->UserTable, <u>idTask</u>->Task) |
 | R04                | EditTaskInfo(<u>idUser</u>->UserTable, <u>idTask</u>->Task, editDate NN) |
-| R05                | CloseRequest(<u>idRequest</u>, creationDate NN, title NN, description, approved NN, idUser->UserTable, idTask->Task) |
+| R05                | CloseRequest(<u>idRequest</u>, creationDate NN, title NN, description, approved NN, idUser->UserTable NN, idTask->Task NN) |
 | R06                | Tag(<u>idTag</u>, name UK NN) |
 | R07                | Tagged(<u>idTask</u>->Task, <u>idTag</u>->Tag) |
 | R08                | Comment(<u>idComment</u>, creationDate NN, lastEditDate, content NN, idTask->Task, idUser->User, idComment->Comment) |
-| R09                | Project(<u>idProject</u>, creationDate NN, name NN, description, private NN, idForum->Forum UK) |
+| R09                | Project(<u>idProject</u>, creationDate NN, name NN, description, private NN) |
 | R10                | Joined(<u>idUser</u>->UserTable, <u>idProject</u>->Project, joinedDate NN, role NN) |
-| R11                | PremiumSignature(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User) |
-| R12                | ProjectForum(<u>idForum</u>) |
-| R13                | ForumPost(<u>idPost</u>, creationDate NN, lastEditDate, title NN, content NN, idForum->Project Forum, idUser->User) |
-| R14                | Reply(<u>idReply</u>, creationDate NN, lastEditDate, content NN, idPost->ForumPost, idUser->User) |
-| R15                | Country(<u>idCountry</u>, name UK NN) |
-| R16                | Admin(<u>idAdmin</u> , username UK NN, password NN, email UK NN) |
-| R17                | BannedRecord(<u>idBan</u>, startDate NN, duration CK duration > interval '0', motive, idUser->UserTable, idAdmin->Admin) |
+| R11                | PremiumSignature(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User NN) |
+| R12                | ForumPost(<u>idPost</u>, creationDate NN, lastEditDate, title NN, content NN, idProject->Project NN, idUser->User NN) |
+| R13                | Reply(<u>idReply</u>, creationDate NN, lastEditDate, content NN, idPost->ForumPost NN, idUser->User NN) |
+| R14                | Country(<u>idCountry</u>, name UK NN) |
+| R15                | Admin(<u>idAdmin</u> , username UK NN, password NN, email UK NN) |
+| R16                | BannedRecord(<u>idBan</u>, startDate NN, duration CK duration > interval '0', motive, idUser->UserTable NN, idAdmin->Admin NN) |
 
 <!--
 UK - UNIQUE
@@ -338,46 +337,12 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
 <table>
   <tr>
     <th colspan="2">
-      <b>Table R09</b> (Thread)
+      <b>Table R09</b> (Project)
     </th>
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idSon}
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2">
-      <b>Functional Dependencies</b>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD0901
-    </td>
-    <td>
-      {idSon}->{idParent}
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <b>Normal Form</b>
-    </td>
-    <td>
-      BCNF
-    </td>
-  </tr>
-</table>
-
-<table>
-  <tr>
-    <th colspan="2">
-      <b>Table R10</b> (Project)
-    </th>
-  </tr>
-  <tr>
-    <td colspan="2">
-      <b>Keys</b>:{idProject, idForum}
+      <b>Keys</b>:{idProject}
     </td>
   </tr>
   <tr>
@@ -390,15 +355,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD1001
     </td>
     <td>
-      {idProject}->{creationDate, name, description, private, idForum}
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD1002
-    </td>
-    <td>
-      {idForum}->{idProject, creationDate, name, description, private}
+      {idProject}->{creationDate, name, description, private}
     </td>
   </tr>
   <tr>
@@ -414,7 +371,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
 <table>
   <tr>
     <th colspan="2">
-      <b>Table R11</b> (Joined)
+      <b>Table R10</b> (Joined)
     </th>
   </tr>
   <tr>
@@ -448,7 +405,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
 <table>
   <tr>
     <th colspan="2">
-      <b>Table R12</b> (PremiumSignature)
+      <b>Table R11</b> (PremiumSignature)
     </th>
   </tr>
   <tr>
@@ -482,38 +439,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
 <table>
   <tr>
     <th colspan="2">
-      <b>Table R13</b> (ProjectForum)
-    </th>
-  </tr>
-  <tr>
-    <td colspan="2">
-      <b>Keys</b>:{idForum}
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2">
-      <b>Functional Dependencies</b>
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2">
-      (none)
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <b>Normal Form</b>
-    </td>
-    <td>
-      BCNF
-    </td>
-  </tr>
-</table>
-
-<table>
-  <tr>
-    <th colspan="2">
-      <b>Table R14</b> (ForumPost)
+      <b>Table R12</b> (ForumPost)
     </th>
   </tr>
   <tr>
@@ -531,7 +457,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD1401
     </td>
     <td>
-      {idPost}->{creationDate, lastEditDate, title, content, idForum, idUser}
+      {idPost}->{creationDate, lastEditDate, title, content, idProject, idUser}
     </td>
   </tr>
   <tr>
@@ -547,7 +473,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
 <table>
   <tr>
     <th colspan="2">
-      <b>Table R15</b> (Reply)
+      <b>Table R13</b> (Reply)
     </th>
   </tr>
   <tr>
@@ -581,7 +507,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
 <table>
   <tr>
     <th colspan="2">
-      <b>Table R16</b> (Country)
+      <b>Table R14</b> (Country)
     </th>
   </tr>
   <tr>
@@ -623,7 +549,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
 <table>
   <tr>
     <th colspan="2">
-      <b>Table R17</b> (Admin)
+      <b>Table R15</b> (Admin)
     </th>
   </tr>
   <tr>
@@ -673,7 +599,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
 <table>
   <tr>
     <th colspan="2">
-      <b>Table R18</b> (BannedRecord)
+      <b>Table R16</b> (BannedRecord)
     </th>
   </tr>
   <tr>
@@ -704,91 +630,84 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
 </table>
 
-//TODO: esta em bcnf
+Because no table in our schema has a functional dependency between non-key attributes, and all the table attributes functionally depend on all candidate keys of their table, we can say that our schema is in Boyce-Codd Normal Form (BCNF).
 
 ## 4. SQL Code
 
-//TODO: USE schema
-
 ```SQL
-DROP SCHEMA IF EXISTS public CASCADE;
-CREATE SCHEMA public;
+DROP SCHEMA IF EXISTS plenum CASCADE;
+CREATE SCHEMA plenum;
+SET search_path TO plenum,public;
 
 /* admin */
-DROP TABLE IF EXISTS public.Admin;
+DROP TABLE IF EXISTS Admin;
 
 /* UserTable */
-DROP TABLE IF EXISTS public.UserTable;
+DROP TABLE IF EXISTS UserTable;
 
 /* premium signature*/
-DROP TABLE IF EXISTS public.PremiumSignature;
+DROP TABLE IF EXISTS PremiumSignature;
 
 /* country */
-DROP TABLE IF EXISTS public.Country;
+DROP TABLE IF EXISTS Country;
 
 /* joined */
-DROP TABLE IF EXISTS public.Joined;
+DROP TABLE IF EXISTS Joined;
 
 /* project */
-DROP TABLE IF EXISTS public.Project;
-
-/* project forum */
-DROP TABLE IF EXISTS public.ProjectForum;
+DROP TABLE IF EXISTS Project;
 
 /* forum post*/
-DROP TABLE IF EXISTS public.ForumPost;
+DROP TABLE IF EXISTS ForumPost;
 
 /* reply */
-DROP TABLE IF EXISTS public.Reply;
+DROP TABLE IF EXISTS Reply;
 
 /* banned record */
-DROP TABLE IF EXISTS public.BannedRecord;
+DROP TABLE IF EXISTS BannedRecord;
 
 /* task */
-DROP TABLE IF EXISTS public.Task;
+DROP TABLE IF EXISTS Task;
 
 /* tag */
-DROP TABLE IF EXISTS public.Tag;
+DROP TABLE IF EXISTS Tag;
 
 /* tagged */
-DROP TABLE IF Exists public.Tagged;
+DROP TABLE IF Exists Tagged;
 
 /* comment */
-DROP TABLE IF EXISTS public.Comment;
-
-/* thread */
-DROP TABLE IF EXISTS public.Thread;
+DROP TABLE IF EXISTS Comment;
 
 /* completed task*/
-DROP TABLE IF EXISTS public.Completed_Task;
+DROP TABLE IF EXISTS Completed_Task;
 
 /* close request */
-DROP TABLE IF EXISTS public.CloseRequest;
+DROP TABLE IF EXISTS CloseRequest;
 
 /* edit task info */
-DROP TABLE IF EXISTS public.EditTaskInfo;
+DROP TABLE IF EXISTS EditTaskInfo;
 
 /* assigned */
-DROP TABLE IF EXISTS public.Assigned;
+DROP TABLE IF EXISTS Assigned;
 
 /* dropping old data types*/
-DROP TYPE IF EXISTS public.gender;
-DROP TYPE IF EXISTS public.role;
+DROP TYPE IF EXISTS gender;
+DROP TYPE IF EXISTS role;
 
 /* creating data types */
-CREATE TYPE public.gender AS ENUM('Male', 'Female', 'Other');
-CREATE TYPE public.role AS ENUM('Owner' , 'Coordinator', 'Member');
+CREATE TYPE gender AS ENUM('Male', 'Female', 'Other');
+CREATE TYPE role AS ENUM('Owner' , 'Coordinator', 'Member');
 
 /* country */
-CREATE TABLE public.Country(
+CREATE TABLE Country(
 	idCountry serial PRIMARY KEY,
 	name text UNIQUE NOT NULL
 );
 
 /* UserTable */
-CREATE TABLE public.UserTable(
+CREATE TABLE UserTable(
 	idUser serial PRIMARY KEY,
-	UserTablename text UNIQUE NOT NULL,
+	userName text UNIQUE NOT NULL,
 	password text NOT NULL,
 	email text UNIQUE NOT NULL,
 	gender gender,
@@ -802,7 +721,7 @@ CREATE TABLE public.UserTable(
 );
 
 /* premium signature */
-CREATE TABLE public.PremiumSignature(
+CREATE TABLE PremiumSignature(
 	idPremium serial PRIMARY KEY,
 	startDate timestamp NOT NULL,
 	duration  interval NOT NULL CHECK (duration > interval '0'),
@@ -810,28 +729,21 @@ CREATE TABLE public.PremiumSignature(
 	FOREIGN KEY(idUser) REFERENCES UserTable(idUser)
 );
 
-/* project forum */
-CREATE TABLE public.ProjectForum(
-	idForum serial PRIMARY KEY
-);
-
-
 /* project */
-CREATE TABLE public.Project(
+CREATE TABLE Project(
 	idProject serial PRIMARY KEY,
 	creationDate timestamp NOT NULL,
 	name text NOT NULL,
 	description text NOT NULL,
-	private boolean NOT NULL,
-	idForum integer UNIQUE NOT NULL,
-	FOREIGN KEY(idForum) REFERENCES ProjectForum(idForum)
+	private boolean NOT NULL
 );
 
 /* joined */
-CREATE TABLE public.Joined(
+CREATE TABLE Joined(
 	idUser integer,
 	idProject integer,
 	joinedDate timestamp NOT NULL,
+	leftDate timestamp,
 	role Role NOT NULL,
 	PRIMARY KEY(idUser, idProject),
 	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
@@ -839,20 +751,20 @@ CREATE TABLE public.Joined(
 );
 
 /* forum post */
-CREATE TABLE public.ForumPost(
+CREATE TABLE ForumPost(
 	idPost serial PRIMARY KEY,
 	creationDate timestamp NOT NULL,
 	lastEditDate timestamp,
 	title text NOT NULL,
 	content text NOT NULL,
-	idForum integer NOT NULL,
+	idProject integer NOT NULL,
 	idUser integer NOT NULL,
-	FOREIGN KEY(idForum) REFERENCES ProjectForum(idForum),
+	FOREIGN KEY(idProject) REFERENCES Project(idProject),
 	FOREIGN KEY(idUser) REFERENCES UserTable(idUser)
 );
 
 /* reply */
-CREATE TABLE public.Reply(
+CREATE TABLE Reply(
 	idReply serial PRIMARY KEY,
 	creationDate timestamp NOT NULL,
 	lastEditDate timestamp,
@@ -864,7 +776,7 @@ CREATE TABLE public.Reply(
 );
 
 /* task */
-CREATE TABLE public.Task(
+CREATE TABLE Task(
 	idTask serial PRIMARY KEY,
 	creationDate timestamp NOT NULL,
 	lastEditDate timestamp,
@@ -881,7 +793,7 @@ CREATE TABLE public.Task(
 );
 
 /* assigned */
-CREATE TABLE public.Assigned(
+CREATE TABLE Assigned(
 	idUser integer,
 	idTask integer,
 	PRIMARY KEY(idUser, idTask),
@@ -890,17 +802,20 @@ CREATE TABLE public.Assigned(
 );
 
 /* edit task info */
-CREATE TABLE public.EditTaskInfo(
+CREATE TABLE EditTaskInfo(
 	idUser integer,
 	idTask integer,
 	editDate timestamp NOT NULL,
+	oldTitle text NOT NULL,
+	oldDescription text,
+	oldDeadline timestamp,
 	PRIMARY KEY(idUser, idTask),
 	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
 	FOREIGN KEY(idTask) REFERENCES Task(idTask)
 );
 
 /* comment */
-CREATE TABLE public.Comment(
+CREATE TABLE Comment(
 	idComment serial PRIMARY KEY,
 	creationDate timestamp NOT NULL,
 	lastEditDate timestamp,
@@ -912,13 +827,13 @@ CREATE TABLE public.Comment(
 );
 
 /* tag */
-CREATE TABLE public.Tag(
+CREATE TABLE Tag(
 	idTag serial PRIMARY KEY,
 	name text UNIQUE NOT NULL
 );
 
 /* tagged */
-CREATE TABLE public.Tagged(
+CREATE TABLE Tagged(
 	idTask integer,
 	idTag integer,
 	PRIMARY KEY(idTask, idTag),
@@ -926,16 +841,8 @@ CREATE TABLE public.Tagged(
 	FOREIGN KEY(idTag) REFERENCES Tag(idTag)
 );
 
-/* thread */
-CREATE TABLE public.Thread(
-	idSon integer PRIMARY KEY,
-	idParent integer,
-	FOREIGN KEY(idParent) REFERENCES Comment(idComment),
-	FOREIGN KEY(idSon) REFERENCES Comment(idComment)
-);
-
 /* close request */
-CREATE TABLE public.CloseRequest(
+CREATE TABLE CloseRequest(
 	idRequest serial PRIMARY KEY,
 	creationDate timestamp NOT NULL,
 	title text NOT NULL,
@@ -948,7 +855,7 @@ CREATE TABLE public.CloseRequest(
 );
 
 /* Admin */
-CREATE TABLE public.Admin(
+CREATE TABLE Admin(
 	idAdmin serial PRIMARY KEY,
 	UserTablename text UNIQUE NOT NULL,
 	email text UNIQUE NOT NULL,
@@ -956,7 +863,7 @@ CREATE TABLE public.Admin(
 );
 
 /* Banned record */
-CREATE TABLE public.BannedRecord(
+CREATE TABLE BannedRecord(
 	idBan serial PRIMARY KEY,
 	startDate timestamp NOT NULL,
 	duration integer NOT NULL,
@@ -971,13 +878,15 @@ CREATE TABLE public.BannedRecord(
 [Link to the SQL script included in the repository.](https://github.com/mpcmarques/lbaw1743/blob/master/database/plenum.sql)
 
 ***
-<!-- ## Revision history
+## Revision history
 
 Changes made to the first submission:
-1. Item 1
-1. Item 2
+1. Added constraints to Relational Schema.
+2. Updated SQL so that we don't have to specify the schema.
+3. Deleted Thread and ProjectForum Table from Relational Schema.
+4. Added explanation to why our schema is in BCNF Form.
 
-*** -->
+***
 
 GROUP1743, 05/03/2018
 
