Started: insert queries :zap:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -47,12 +47,233 @@ This artefact contains the physical schema of the database, the identification a
 
 > Most important updates (INSERT, UPDATE, DELETE) and their frequency.
 
-| Query reference   | UPDATE01                               |
-| Query description | One sentence describing the query goal |
-| Query frequency   | magnitude per time                     |
-| ----------------- | -------------------------------------- |
-| SQL code                                                   |
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT01</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>New user registered</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>dozens per month</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "UserTable" (username, password, email, name, gender, address,institution, description, birthDate, idCountry) VALUES ($username, $password, $email, $name, $gender, $address, $institution, $description, $birthDate, $idCountry);</code></td>
+    </tr>
+</table>
 
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT02</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>New project created</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>dozens per month</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "Project"(creationDate, name, description, private, idForum) VALUES ($creationDate, $name, $description, $private, $idForum);</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT03</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>New task created</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>dozens per month</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "Task"(creationDate, lastEditDate, title, description, deadline, completed, completedDate, idUser, idProject) VALUES ($creationDate, $lastEditDate, $title, $description, $deadline, $completed, $completedDate, $idUser, $idProject);</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT04</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>New comment created</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>dozens per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "Comment"(creationDate, lastEditDate, content, idTask, idUser, idComment) VALUES ($creationDate, $lastEditDate, $content, $idTask, $idUser, $idComment);</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT05</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>New premium signature</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "PremiumSignature"(startDate, duration, idUser) VALUES ($startDate, $duration, $idUser);</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT06</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>New forum post</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>dozens per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "ForumPost"(creationDate, lastEditDate, title, content, idForum, idUser) VALUES ($creationDate, $lastEditDate, $title, $content, $idForum, $idUser);</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT07</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>New admin created</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>dozens per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "Admin"(username, password, email) VALUES ($username, $password, $email);</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT08</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>User assigned to task</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>dozens per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "Assigned"(idUser, idTask) VALUES ($idUser, $idTask);</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT09</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>New close request</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>dozens per week</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "CloseRequest"(creationDate, title, description, approved, idUser, idTask) VALUES ($creationDate, $title, $description, $approved, $idUser, $idTask);</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT10</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>New reply created</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>dozens per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "Reply"( creationDate, lastEditDate, content, idPost, idUser) VALUES ($creationDate, $lastEditDate, $content, $idPost, $idUser);</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT11</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>New country inserted</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per week, mostly when the database is created</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "Country"( name) VALUES ($name);</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>INSERT12</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>User joined project</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Dozens per week</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">INSERT INTO "Joined"(idUser, idProject, joinedDate, role) VALUES ($idUser, $idProject, $joinedDate, $role);</code></td>
+    </tr>
+</table>
 
 ## 2. Proposed Indices
 
