Updated sql :pencil2:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -9,13 +9,13 @@ Relation schemas are specified in the compact notation:
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
 | R01                | UserTable(<u>idUser</u>, username UK NN, password NN, email UK NN, premium NN, banned NN, name, gender, address,institution, description, birthDate CK birthDate < current_date, idCountry->Country) |
-| R02                | Task(<u>idTask</u>, creationDate NN, lastEditDate, title NN, description, deadline, completed NN, completedDate CK completedDate > creationDate, idUser->UserTable NN, idProject->Project NN) |
+| R02                | Task(<u>idTask</u>, creationDate NN, lastEditDate, title NN, description, deadline, completed NN, completetionDate CK completetionDate > creationDate, idUser->UserTable NN, idProject->Project NN) |
 | R03                | Assigned(<u>idUser</u>->UserTable, <u>idTask</u>->Task) |
 | R04                | EditTaskInfo(<u>idUser</u>->UserTable, <u>idTask</u>->Task, editDate NN) |
 | R05                | CloseRequest(<u>idRequest</u>, creationDate NN, title NN, description, approved NN, idUser->UserTable NN, idTask->Task NN) |
 | R06                | Tag(<u>idTag</u>, name UK NN) |
 | R07                | Tagged(<u>idTask</u>->Task, <u>idTag</u>->Tag) |
-| R08                | Comment(<u>idComment</u>, creationDate NN, lastEditDate, content NN, idTask->Task, idUser->User, idComment->Comment) |
+| R08                | Comment(<u>idComment</u>, creationDate NN, lastEditDate, content NN, idTask->Task, idUser->User, idParent->Comment) |
 | R09                | Project(<u>idProject</u>, creationDate NN, name NN, description, private NN) |
 | R10                | Joined(<u>idUser</u>->UserTable, <u>idProject</u>->Project, joinedDate NN, role NN) |
 | R11                | PremiumSignature(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User NN) |
@@ -882,9 +882,10 @@ CREATE TABLE BannedRecord(
 
 Changes made to the first submission:
 1. Added constraints to Relational Schema.
-2. Updated SQL so that we don't have to specify the schema.
-3. Deleted Thread and ProjectForum Table from Relational Schema.
-4. Added explanation to why our schema is in BCNF Form.
+2. Added constraints to SQL.
+3. Updated SQL so that we don't have to specify the schema.
+4. Deleted Thread and ProjectForum Table from Relational Schema.
+5. Added explanation to why our schema is in BCNF Form.
 
 ***
 
