Updated SQL in A5 artifact :pencil2:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -639,6 +639,7 @@ DROP SCHEMA IF EXISTS plenum CASCADE;
 CREATE SCHEMA plenum;
 SET search_path TO plenum,public;
 
+/* every table should already be dropped, we are just making sure :) */
 /* admin */
 DROP TABLE IF EXISTS Admin;
 
@@ -695,7 +696,7 @@ DROP TYPE IF EXISTS gender;
 DROP TYPE IF EXISTS role;
 
 /* creating data types */
-CREATE TYPE gender AS ENUM('Male', 'Female', 'Other');
+CREATE TYPE gender AS ENUM('Male', 'Female');
 CREATE TYPE role AS ENUM('Owner' , 'Coordinator', 'Member');
 
 /* country */
@@ -707,11 +708,13 @@ CREATE TABLE Country(
 /* UserTable */
 CREATE TABLE UserTable(
 	idUser serial PRIMARY KEY,
-	userName text UNIQUE NOT NULL,
+	username text UNIQUE NOT NULL,
 	password text NOT NULL,
 	email text UNIQUE NOT NULL,
-	gender gender,
+	premium boolean NOT NULL,
+	banned boolean NOT NULL,
 	name text NOT NULL,
+	gender gender,
 	address text,
 	institution text,
 	description text,
@@ -725,7 +728,7 @@ CREATE TABLE PremiumSignature(
 	idPremium serial PRIMARY KEY,
 	startDate timestamp NOT NULL,
 	duration  interval NOT NULL CHECK (duration > interval '0'),
-	idUser integer,
+	idUser integer NOT NULL,
 	FOREIGN KEY(idUser) REFERENCES UserTable(idUser)
 );
 
@@ -743,7 +746,6 @@ CREATE TABLE Joined(
 	idUser integer,
 	idProject integer,
 	joinedDate timestamp NOT NULL,
-	leftDate timestamp,
 	role Role NOT NULL,
 	PRIMARY KEY(idUser, idProject),
 	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
@@ -784,10 +786,10 @@ CREATE TABLE Task(
 	description text,
 	deadline timestamp,
 	completed boolean NOT NULL,
-	completedDate timestamp,
-	idUser integer,
-	idProject integer,
-	CONSTRAINT completedDate_valid CHECK (completedDate > creationDate),
+	completetionDate timestamp,
+	idUser integer NOT NULL,
+	idProject integer NOT NULL,
+	CONSTRAINT completionDate_valid CHECK (completetionDate > creationDate),
 	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
 	FOREIGN KEY(idProject) REFERENCES Project(idProject)
 );
@@ -806,9 +808,6 @@ CREATE TABLE EditTaskInfo(
 	idUser integer,
 	idTask integer,
 	editDate timestamp NOT NULL,
-	oldTitle text NOT NULL,
-	oldDescription text,
-	oldDeadline timestamp,
 	PRIMARY KEY(idUser, idTask),
 	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
 	FOREIGN KEY(idTask) REFERENCES Task(idTask)
@@ -819,11 +818,13 @@ CREATE TABLE Comment(
 	idComment serial PRIMARY KEY,
 	creationDate timestamp NOT NULL,
 	lastEditDate timestamp,
-	content TEXT NOT NULL,
+	content text NOT NULL,
 	idTask integer NOT NULL,
 	idUser integer NOT NULL,
+	idParent integer,
 	FOREIGN KEY(idTask) REFERENCES Task(idTask),
-	FOREIGN KEY(idUser) REFERENCES UserTable(idUser)
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
+	FOREIGN KEY(idParent) REFERENCES Comment(idComment)
 );
 
 /* tag */
@@ -847,9 +848,9 @@ CREATE TABLE CloseRequest(
 	creationDate timestamp NOT NULL,
 	title text NOT NULL,
 	description text,
-	aproved boolean NOT NULL,
-	idUser integer,
-	idTask integer,
+	approved boolean NOT NULL,
+	idUser integer NOT NULL,
+	idTask integer NOT NULL,
 	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
 	FOREIGN KEY(idTask) REFERENCES Task(idTask)
 );
@@ -857,7 +858,7 @@ CREATE TABLE CloseRequest(
 /* Admin */
 CREATE TABLE Admin(
 	idAdmin serial PRIMARY KEY,
-	UserTablename text UNIQUE NOT NULL,
+	username text UNIQUE NOT NULL,
 	email text UNIQUE NOT NULL,
 	password text NOT NULL
 );
