Updated functional dependencies :pencil2:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -115,7 +115,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD0201
     </td>
     <td>
-      {idTask}->{creationDate, lastEditDate, title, description, deadline, completed, completedDate, idUser, idProject}
+      {idTask}->{creationDate, lastEditDate, title, description, deadline, completed, completetionDate, idUser, idProject}
     </td>
   </tr>
   <tr>
@@ -321,7 +321,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD0801
     </td>
     <td>
-      {idComment}->{creationDate, lastEditDate, content, idTask, idUser}
+      {idComment}->{creationDate, lastEditDate, content, idTask, idUser, idParent}
     </td>
   </tr>
   <tr>
@@ -491,7 +491,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD1501
     </td>
     <td>
-      {idReply}->{creationDate, lastEditDate, title, content, idPost, idUser}
+      {idReply}->{creationDate, lastEditDate, content, idPost, idUser}
     </td>
   </tr>
   <tr>
